[package]
name = "pogey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rustemon = "3.2.1"
serde_json = "1.0.108"
clap = { version = "4.0", features = ["derive"] }
titlecase = "2.2.1"
